--- a/Aula1802.md
+++ b/Aula1802.md
@@ -36,3 +36,22 @@ O Sistema Operacional **gerencia o acesso** aos dispositivos, organizando o uso 
 
 ## 📌 Sistema de Arquivos
 Responsável por **organizar e gerenciar dados em HDs e SSDs**, permitindo criar, ler, modificar e excluir arquivos de forma estruturada e segura.
+--
+
+# Tipos de Sistema de Grande Porte 
+
+## 📌 Sistemas em Lote (Batch)
+
+Sistemas em lote processam **jobs sequencialmente**, sem interação direta do usuário.  
+São **monoprogramados** e **monousuário**, ou seja, executam um programa por vez para um único usuário, organizando tarefas em **fila** para processamento automático.
+
+## 📌 Sistemas Multiprogramados
+
+Sistemas multiprogramados permitem **executar vários programas simultaneamente**, aproveitando melhor a **CPU quando ela estaria ociosa**, aumentando a eficiência do processamento.
+<img width="902" height="537" alt="{2EA574D5-9FAB-4D8F-8D23-029FE2A680D7}" src="https://github.com/user-attachments/assets/3a6c8dff-2092-4969-82ab-275b3e20595d" />
+
+## 📌 Sistemas Timesharing (Tempo Compartilhado)
+
+Sistemas Timesharing são **multiusuário e multiprogramados**, permitindo que vários usuários utilizem o computador **simultaneamente**, compartilhando o tempo da CPU de forma rápida e interativa.
+
+
