--- a/Aula1802.md
+++ b/Aula1802.md
@@ -38,7 +38,7 @@ O Sistema Operacional **gerencia o acesso** aos dispositivos, organizando o uso 
 Responsável por **organizar e gerenciar dados em HDs e SSDs**, permitindo criar, ler, modificar e excluir arquivos de forma estruturada e segura.
 --
 
-# Tipos de Sistema de Grande Porte 
+# Tipos de Sistema de Grande Porte (1) Sist. em Lote , (2) Sist. Multiprog. , (3) Sist. TimeSharing.
 
 ## 📌 Sistemas em Lote (Batch)
 
@@ -54,4 +54,4 @@ Sistemas multiprogramados permitem **executar vários programas simultaneamente*
 
 Sistemas Timesharing são **multiusuário e multiprogramados**, permitindo que vários usuários utilizem o computador **simultaneamente**, compartilhando o tempo da CPU de forma rápida e interativa.
 
-
+# Tipos de Sistemas de PC
