--- a/Aula1802.md
+++ b/Aula1802.md
@@ -1,4 +1,4 @@
-# Aula 1 – Conceitos Básicos de Sistemas Operacionais
+# 🖥️ Aula 1 – Conceitos Básicos de Sistemas Operacionais 
 
 ---
 
@@ -38,23 +38,43 @@ O Sistema Operacional **gerencia o acesso** aos dispositivos, organizando o uso 
 Responsável por **organizar e gerenciar dados em HDs e SSDs**, permitindo criar, ler, modificar e excluir arquivos de forma estruturada e segura.
 ---
 
-# Tipos de Sistema de Grande Porte (1) Sist. em Lote , (2) Sist. Multiprog. , (3) Sist. TimeSharing.
+# 🖥️ Tipos de Sistema de Grande Porte (1) Sist. em Lote , (2) Sist. Multiprog. , (3) Sist. TimeSharing.
 
-## 📌 Sistemas em Lote (Batch)
+## 📌 Sistemas em Lote (Batch) - 1
 
 Sistemas em lote processam **jobs sequencialmente**, sem interação direta do usuário.  
 São **monoprogramados** e **monousuário**, ou seja, executam um programa por vez para um único usuário, organizando tarefas em **fila** para processamento automático.
 
 ---
-## 📌 Sistemas Multiprogramados
+## 📌 Sistemas Multiprogramados - 2 
 
 Sistemas multiprogramados permitem **executar vários programas simultaneamente**, aproveitando melhor a **CPU quando ela estaria ociosa**, aumentando a eficiência do processamento.
 <img width="902" height="537" alt="{2EA574D5-9FAB-4D8F-8D23-029FE2A680D7}" src="https://github.com/user-attachments/assets/3a6c8dff-2092-4969-82ab-275b3e20595d" />
 
 ---
-## 📌 Sistemas Timesharing (Tempo Compartilhado)
+## 📌 Sistemas Timesharing (Tempo Compartilhado) - 3
 
 Sistemas Timesharing são **multiusuário e multiprogramados**, permitindo que vários usuários utilizem o computador **simultaneamente**, compartilhando o tempo da CPU de forma rápida e interativa.
 
 ---
-# Tipos de Sistemas de PC
+# 🖥️Sistemas de Computadores Pessoais (Desktop)
+
+- Inicialmente **não multiusuário nem multitarefa** e sem proteção do SO.
+
+---  
+## ⚙️ MULTICS
+
+- Desenvolvido entre **1965-1970** no MIT para mainframes (GE645).  
+- Inspirou a criação do **Unix (1970)** nos Bell Labs para minicomputadores (PDP-11).  
+- Nos anos **1980-90**, ideias do Unix foram adaptadas para sistemas de microcomputador.
+
+---
+
+# 🖥️ Sistemas Paralelos (Fortemente Acoplados)
+
+# 🔗 Sistemas Paralelos
+
+Sistemas Paralelos utilizam **vários processadores simultaneamente** para executar **vários programas ou partes de um mesmo programa**, aumentando a velocidade e eficiência do processamento.  
+
+- São comuns em **supercomputadores e servidores de alto desempenho**, para tarefas como **simulações científicas**, **processamento de grandes volumes de dados** e **análise complexa**.  
+- **Comunicação entre processos:** os processadores podem trocar dados **diretamente através da memória compartilhada**, garantindo que todos trabalhem de forma coordenada e evitando redundância ou conflitos.
