--- a/Aula1802.md
+++ b/Aula1802.md
@@ -71,10 +71,11 @@ Sistemas Timesharing são **multiusuário e multiprogramados**, permitindo que v
 ---
 
 # 🖥️ Sistemas Paralelos (Fortemente Acoplados)
+> **💡 Observação:**  
+> Um sistema **fortemente acoplado** possui vários processadores que **compartilham a mesma memória e dispositivos**, permitindo comunicação rápida e coordenada entre eles.
 
-# 🔗 Sistemas Paralelos
 
-Sistemas Paralelos utilizam **vários processadores simultaneamente** para executar **vários programas ou partes de um mesmo programa**, aumentando a velocidade e eficiência do processamento.  
+Sistemas Paralelos utilizam **vários processadores simultaneamente** para executar **vários programas ou partes de um mesmo programa**, aumentando a velocidade e eficiência do processamento.
 
 - São comuns em **supercomputadores e servidores de alto desempenho**, para tarefas como **simulações científicas**, **processamento de grandes volumes de dados** e **análise complexa**.  
 - **Comunicação entre processos:** os processadores podem trocar dados **diretamente através da memória compartilhada**, garantindo que todos trabalhem de forma coordenada e evitando redundância ou conflitos.
