--- a/Aula1802.md
+++ b/Aula1802.md
@@ -79,3 +79,42 @@ Sistemas Paralelos utilizam **vários processadores simultaneamente** para execu
 
 - São comuns em **supercomputadores e servidores de alto desempenho**, para tarefas como **simulações científicas**, **processamento de grandes volumes de dados** e **análise complexa**.  
 - **Comunicação entre processos:** os processadores podem trocar dados **diretamente através da memória compartilhada**, garantindo que todos trabalhem de forma coordenada e evitando redundância ou conflitos.
+
+---
+# 🌐 Sistemas Distribuídos
+
+Sistemas distribuídos surgem com o **crescimento das redes de computadores** e consistem em **vários computadores fracamente acoplados** que colaboram para executar tarefas.  
+
+- **Comunicação:** feita por **troca de mensagens** entre os nós da rede.  
+- **Modelos comuns:**  
+  - **Cliente-Servidor:** servidores fornecem serviços para clientes.  
+  - **Peer-to-Peer (P2P):** cada nó atua como cliente e servidor simultaneamente.  
+  - **Sistemas Operacionais Distribuídos:**
+
+---
+# ⏱️ Sistemas de Tempo Real
+
+> **💡 Observação:**  
+> Sistemas de tempo real exigem respostas **imediatas e previsíveis**, por isso **não usam memória virtual**, que é mais lenta e imprevisível.  
+> **Exemplo de aplicação:** controle de **trens, aviões ou processos industriais dedicados**.
+
+---
+# 📱 Sistemas para Dispositivos Móveis
+
+Sistemas móveis são **projetados para smartphones, tablets e dispositivos portáteis**, otimizando **consumo de energia, conectividade e desempenho limitado de hardware**.  
+
+### 🔹 Características principais:
+- **Multitarefa limitada** para economizar bateria  
+- **Interface touch-friendly** e adaptada a telas pequenas  
+- **Gerenciamento eficiente de recursos** (CPU, memória e rede)  
+- **Segurança e proteção de dados**  
+- **Atualizações e compatibilidade com apps móveis**
+
+---
+# 📝 Considerações Finais
+
+O **Sistema Operacional (SO)** é fundamental em qualquer computador, pois:  
+
+- Oferece ao usuário um **ambiente conveniente** para desenvolvimento e execução de programas.  
+- **Gerencia os recursos do sistema** (CPU, memória, dispositivos) garantindo uso correto e eficiente.  
+- Permite a **multiprogramação**, possibilitando que vários programas sejam executados simultaneamente, aproveitando melhor a CPU e outros recursos.
